[package]
name = "gatekeeper-rs"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "High-performance, fault-tolerant AI proxy for Cloudflare Workers"
repository = "https://github.com/BYC30/gatekeeper-rs"
readme = "README.md"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
worker = "0.6.6"
console_error_panic_hook = "0.1"

[dev-dependencies]
serde_json = "1"
